<resources>
    <string name="app_name">Scavenger</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_search_settings">Search Settings</string>
    <string name="menu_header_text">Navigation Menu</string>
    <string name="search_icon_text">Search</string>
    <string name="auto_search">Enable Auto Search</string>
    <string name="frequency_label">Frequency</string>
    <string name="location_label">Location: </string>
    <string name="keyword_title_label">Keywords</string>
    <string name="add_keyword_button_label">Add Keyword</string>\

    <string name="notification_channel_name">Scavenger</string>
    <string name="notification_channel_desc">Sends notifications with current location</string>
    <string name="notification_channel_id">ScavengerNotifyId</string>
    <string name="notification_title">Auto-Search Results</string>
    <string name="title_activity_delete_this">Map</string>
</resources>
