<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.csci448.ebergo.scavenger2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search_settings"
        android:name="com.csci448.ebergo.scavenger2.ui.gallery.GalleryFragment"
        android:label="@string/menu_search_settings"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.csci448.ebergo.scavenger2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/" />


</navigation>